# esoccer-battle-v2

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  playwright.config.ts
scripts/: convert-kokoro-onnx.py  download-models.sh
src/: App.tsx  debugLogger.ts  speech-recognition.d.ts  tauriBridge.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/models/whisper/: decoder_model_merged.onnx  encoder_model.onnx
src-tauri/src/: audio_utils.rs  commands.rs  db.rs  lib.rs  main.rs  match_state.rs  models.rs  stt.rs  tts.rs
src/components/: CommandHistory.tsx  DebugPanel.tsx  LoadingScreen.tsx  MatchHistory.tsx  ScoreBoard.tsx  StatusBar.tsx  TextCommandInput.tsx  VoiceButton.tsx
src/hooks/: useMicrophone.ts  useSpeechRecognition.ts  useVoiceCommands.ts  useWhisperSTT.ts
src/styles/: index.css
tests/: e2e.spec.ts
