[package]
name = "esoccer-battle"
version = "0.1.0"
edition = "2021"

[lib]
name = "esoccer_battle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
regex = "1"
hound = "3"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1"
ndarray = "0.16"
symphonia = "0.5"
rustfft = "6"
tracing = "0.1"
log = "0.4"
